--- a/package.json
+++ b/package.json
@@ -1,29 +1,26 @@
 {
-  "name": "character_sheet",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-scripts-parcel": "0.0.38"
-  },
+  "name": "recipe_book",
+  "source": "src/index.html",
+  "version": "1.0.0",
+  "description": "App to store recipes",
+  "main": "index.js",
   "scripts": {
-    "start": "react-scripts-parcel start",
-    "build": "react-scripts-parcel build",
-    "test": "react-scripts-parcel test --env=jsdom",
-    "eject": "react-scripts-parcel eject"
+    "start": "parcel",
+    "build": "parcel build"
   },
-  "browserslist": {
-    "development": [
-      "last 2 chrome versions",
-      "last 2 firefox versions",
-      "last 2 edge versions"
-    ],
-    "production": [
-      ">1%",
-      "last 4 versions",
-      "Firefox ESR",
-      "not ie < 11"
-    ]
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@emotion/styled": "^11.8.1",
+    "prop-types": "^15.8.1",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.17.0",
+    "eslint-plugin-react": "^7.30.0",
+    "parcel": "^2.6.0",
+    "process": "^0.11.10"
   }
 }
