--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
   "license": "ISC",
   "dependencies": {
     "@emotion/styled": "^11.8.1",
+    "@reduxjs/toolkit": "^1.8.2",
+    "axios": "^0.27.2",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
+    "buffer": "^6.0.3",
     "eslint": "^8.17.0",
     "eslint-plugin-react": "^7.30.0",
     "parcel": "^2.6.0",
